--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix --ext .js,.jsx,.ts,.tsx",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "postinstall": "npx husky install"
   },
   "dependencies": {
     "@types/node": "20.6.0",
@@ -30,13 +31,11 @@
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "npm run lint:fix",
-      "npm run prettier",
-      "git add"
+      "npm run prettier"
     ],
     "**/*.{html, json}": [
       "npm run lint:fix",
-      "npm run prettier",
-      "git add"
+      "npm run prettier"
     ]
   },
 }
