--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint",
     "lint:fix": "eslint src --fix --ext .js,.jsx,.ts,.tsx",
     "prettier": "prettier --write .",
-    "postinstall": "npx husky install"
+    "postinstall": "npx husky install",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged",
+    "test": "jest --collect-coverage --config=jest.config.js"
   },
   "dependencies": {
     "@types/node": "20.6.0",
@@ -21,12 +24,22 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.6.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.2",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.49.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
-    "husky": "^8.0.3",
+    "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^14.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "react-test-renderer": "^18.2.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
